style: fix body horizontal and vertical overflow

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -1,6 +1,6 @@
 body {
   min-height: 100vh;
-  overflow: auto hidden;
+  overflow: hidden auto;
   font-family: 'Roboto';
   background-color: var(--background-default);
 }
